@@ -37,6 +37,7 @@ Patches
  - Beau Gunderson
  - John Hague
  - Aubrey Holland
+ - Konstantin Käfer
  - Mak Kolybabi
  - Dennis Luxen
  - Tom MacWright
