@@ -102,6 +102,7 @@ source = Split(
     expression_node.cpp
     expression_string.cpp
     filter_factory.cpp
+    feature_type_style.cpp
     font_engine_freetype.cpp
     font_set.cpp
     gradient.cpp
